Adjusted layout, added translation to Navigation Tabs

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -120,5 +120,9 @@
     "save": "Speichern",
     "deviceList": {
         "devices": "Geräte"
+    },
+    "navigation": {
+        "livedata": "Livedaten",
+        "settings": "Einstellungen"
     }
 }
