Implemented information screens

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -45,7 +45,12 @@
         "acCurrent": "AC Current",
         "minMaxAvg": "min: {{min}} {{unit}} max: {{max}} {{unit}} avg: {{avg}} {{unit}}",
         "noDatabaseConfigured": "No database configured",
-        "noDatabaseConfiguredDescription": "To see charts, configure and assign a database to your DTU."
+        "noDatabaseConfiguredDescription": "To see charts, configure and assign a database to your DTU.",
+        "lastNSeconds": "Last {{n}} seconds",
+        "lastNMinutes": "Last {{n}} minutes",
+        "lastNHours": "Last {{n}} hours",
+        "lastNDays": "Last {{n}} days",
+        "checkDatabase": "Check if the database is running and reachable."
     },
     "setup": {
         "setupComplete": "Setup complete! \uD83C\uDF89",
@@ -187,10 +192,73 @@
             "nrf24ChipType": "nRF24 Chip Type",
             "cmt2300aStatus": "CMT2300A Status",
             "cmt2300aChipStatus": "CMT2300A Chip Status"
+        },
+        "networkInformation": "Network Information",
+        "networkInformationDescription": "WiFi \u2022 Ethernet \u2022 mDNS",
+        "networkInformationScreen": {
+            "wifiStation": "WiFi Station",
+            "wifiAccessPoint": "WiFi Access Point",
+            "wifiStationInterface": "WiFi Station Interface",
+            "wifiAccessPointInterface": "WiFi Access Point Interface",
+            "status": "Status",
+            "ssid": "SSID",
+            "bssid": "BSSID",
+            "quality": "Quality",
+            "rssi": "Signal Strength",
+            "numberOfStations": "Number of Stations",
+            "hostname": "Hostname",
+            "ipAddress": "IP Address",
+            "subnetMask": "Subnet Mask",
+            "gateway": "Gateway",
+            "dns1": "DNS 1",
+            "dns2": "DNS 2",
+            "macAddress": "MAC Address"
+        },
+        "ntpInformation": "NTP Information",
+        "ntpInformationDescription": "NTP Configuration \u2022 NTP Status",
+        "ntpInformationScreen": {
+            "configurationSummary": "Configuration Summary",
+            "ntpServer": "NTP Server",
+            "ntpTimezone": "NTP Timezone",
+            "ntpTimezoneDescription": "NTP Timezone Description",
+            "status": "Status",
+            "currentTime": "Current Time",
+            "localTime": "Local Time",
+            "sunrise": "Sunrise",
+            "sunset": "Sunset",
+            "mode": "Mode",
+            "day": "Day",
+            "night": "Night"
+        },
+        "mqttInformation": "MQTT Information",
+        "mqttInformationDescription": "MQTT Configuration \u2022 MQTT Status",
+        "mqttInformationScreen": {
+            "configurationSummary": "Configuration Summary",
+            "status": "Status",
+            "server": "Server",
+            "username": "Username",
+            "port": "Port",
+            "baseTopic": "Base Topic",
+            "publishInterval": "Publish Interval",
+            "cleansessionFlag": "CleanSession Flag",
+            "retain": "Retain",
+            "tls": "TLS",
+            "loginWithTlsCertificate": "Login with TLS Certificate",
+            "homeAssistantAutoDiscovery": "Home Assistant Auto Discovery",
+            "expire": "Expire",
+            "individualPanels": "Individual Panels",
+            "runtimeSummary": "Runtime Summary",
+            "connectionStatus": "Connection Status"
         }
     },
     "connected": "Connected",
     "notConnected": "Not connected",
     "configured": "Configured",
-    "notConfigured": "Not configured"
+    "notConfigured": "Not configured",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "unavailable": "Unavailable",
+    "synced": "Synced",
+    "notSynced": "Not synced",
+    "n_seconds": "{{n}} seconds"
 }
